--- a/RationShop/WebApp/templates/ShopSignUp.html
+++ b/RationShop/WebApp/templates/ShopSignUp.html
@@ -246,5 +246,20 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+{% if messages %}
+<script>
+	{% for message in messages %}
+        Swal.fire({
+            title: '{{ message.tags|title }}',
+            text: '{{ message }}',
+            icon: '{{ message.tags }}',
+            conf
+            irmButtonText: 'OK'
+        });
+    {% endfor %}
+</script>
+{% endif %}
 </body>
 </html>
